--- a/style.css
+++ b/style.css
@@ -1,18 +1,16 @@
-.button {
-    margin-left: 250px;
-}
-
 .weekdays {
     display: flex;
     justify-content: center;
     font-size: 25px;
-}
+} 
 .weekday {
     display: flex;
     justify-content: center;
     margin: 10px;
     border-style: solid;
     padding: 15px;
+    max-width: 900px;
+    text-decoration: none;
 }
 .selected {
     display: flex;
@@ -23,4 +21,22 @@
     height: 5px;
     margin-top: -5px;
     margin-left: 10px;
+}
+.week-changer {
+    display: flex;
+    justify-content: center;
+}
+.top-bar {
+    display: flex;
+    justify-content: center;
+    flex-direction: none;
+}
+
+.arrow-left {
+    display: flex;
+
+}
+
+.arrow-right {
+    display: flex;
 }
