--- a/style.css
+++ b/style.css
@@ -3,50 +3,53 @@ body {
 }
 
 .weekdays {
-    display: flex;
-    justify-content: center;
-    font-size: 25px;
+	display: flex;
+	justify-content: center;
+	font-size: 25px;
 }
 
 .weekday {
-    display: flex;
-    justify-content: center;
-    margin: 10px;
-    border-style: solid;
-    padding: 15px;
-    max-width: 900px;
-    text-decoration: none;
+	display: flex;
+	justify-content: center;
+	margin: 10px;
+	border-style: solid;
+	border-color: black;
+	padding: 15px;
+	max-width: 900px;
+	text-decoration: none;
 }
 
 .selected {
-    display: flex;
-    /*position: relative;*/
-    background-color: aqua;
-    justify-content: center;
-    width: 70%;
-    height: 5px;
-    margin-top: -5px;
-    margin-left: 10px;
+	display: flex;
+	/*position: relative;*/
+	background-color: aqua;
+	justify-content: center;
+	width: 70%;
+	height: 5px;
+	margin-top: -5px;
+	margin-left: 10px;
 }
 
 .week-changer {
-    display: flex;
-    justify-content: center;
+	display: flex;
+	justify-content: space-between;
 }
 
-.top-bar {
-    display: flex;
-    justify-content: center;
-    flex-direction: none;
+.week-changer div{;
+	display: flex;
+}
+
+.week-changer div > span{
+	margin: 0 0.5rem;
 }
 
 .arrow-left {
-    display: flex;
+	display: flex;
 
 }
 
 .arrow-right {
-    display: flex;
+	display: flex;
 }
 
 .lesson {
@@ -88,15 +91,15 @@ body {
 }
 
 .day > div:nth-child(6) {
-    margin-top: 100px;
+	margin-top: 100px;
 }
 
 h2 {
-    display: flex;
-    justify-content: center;
+	display: flex;
+	justify-content: center;
 }
 
 .weekdays {
-    display: flex;
-    justify-content: space-between;
+	display: flex;
+	justify-content: space-between;
 }
