--- a/style.css
+++ b/style.css
@@ -1,4 +1,6 @@
 body {
+	margin: 0px;
+	padding: 0px;
 	background-color: white;
 }
 
@@ -102,4 +104,17 @@ h2 {
 .weekdays {
 	display: flex;
 	justify-content: space-between;
+}
+
+.bottom_options {
+	position: fixed;
+	bottom: 0;
+	display: flex;
+	height: 50px;
+	width: 100%;
+	align-items: center;
+	justify-content: space-around;
+	background-color: rgb(61, 90, 133);
+	font-family: 'Inter', sans-serif;
+	color: white;
 }
