--- a/style.css
+++ b/style.css
@@ -4,6 +4,14 @@ body {
 	background-color: white;
 }
 
+.top-bar {
+	background-color: white;
+	width: 100%;
+	position: fixed;
+	height 110px;
+	top: 0;
+}
+
 .weekdays {
 	display: flex;
 	justify-content: center;
@@ -54,6 +62,11 @@ body {
 	display: flex;
 }
 
+#table {
+	margin-top: 110px;
+	margin-bottom: 60px;
+}
+
 .lesson {
 	background-color: hsl(102, 53%, 52%);
 	border: 2px solid black;
@@ -88,7 +101,8 @@ body {
 }
 
 .day .dateName {
-	margin: 2rem 0;
+	margin-bottom: 2rem;
+	padding-top: 110px;
 	font-size: 1.5rem;
 }
 
